src/test/deca/syntax/valid/created/class7.deca
class A{
	int methA(){}
}

class B extends A{
	int methA(){}
}

{}
