src/test/deca/syntax/invalid/created/faux46.deca
class A{
	int meth(int int ){

	}
}

{}
